
5.1.0 -> 5.2a0:
    - jbj: add RPMTAG_WHATNEEDS header extension.
    - jbj: move rpmns.[ch] to -lrpmdb for use with header format extensions.
    - jbj: pass rpmdb to header format extenensions with header.
    - jbj: move rpmevr.[ch] to -lrpmdb for use with header format extensions.
    - jbj: fix: "%description -n foo-bar" needs an additional comparison.
    - jbj: add non-{GIF,XPM} formats opaquely using arbitrary Icon: tagno.
    - jbj: fix: allocate Icon: buffer after iconsize is initialized.
    - jbj: permit configurable POSIX behavior for parameterized macros
	  (Marcin Kowalczyk<qrczak@knm.org.pl>).
    - jbj: add getter/setter methods to pass a rpmdb using a header argument.
    - jbj: tests: wire up plain HTTP manifest query.
    - jbj: http: ignore 501 from OPTIONS attempt to non-DAV server.
    - jbj: two copies of rpmrepo.c/rpmmtree.c is too many.
    - jbj: tests: add probes-test package to exercise dependency probes.
    - jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
    - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c
    - jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
	(Alexey Tourbin<at@altlinux.ru>).
    - jbj: fix: Install-Size: spewage in Kb, not bytes. everone gotta be different.
    - jbj: permit *.deb syntax as arbitrary tags.
    - jbj: add *.deb format dependency tag header extensions.
    - jbj: fix: return 1 rather than assertion failing on Suggests: header ext
	query of package with no Requires:.
    - rse: unbreak building without LZMAUtils library
    - jbj: add --deb:foo aliases for *.deb spewage.
    - jbj: rework :strsub find-and-replace to use mire patterns.
    - jbj: mire: add REG_NEWLINE to default regex compilation.
    - jbj: add :strsub format extension find-and-replace using posix RE's.
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: lzdio: start using -llzma instead.